# serializer version: 1
# name: test_coordinator_update
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'FeedId': '1',
      'FeedName': 'parameter 1',
      'LastUpdated': 1665509570,
      'LastUpdatedStr': '2022-10-11T10:32:50-07:00',
      'Size': '35809224',
      'Tag': 'tag',
      'UserId': '1',
      'device_class': 'energy',
      'friendly_name': 'emoncms@1.1.1.1 parameter 1',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      'unit_of_measurement': 'kWh',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.emoncms_1_1_1_1_parameter_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '18.04',
  })
# ---
# name: test_coordinator_update.1
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'FeedId': '2',
      'FeedName': 'parameter 2',
      'LastUpdated': 1665509570,
      'LastUpdatedStr': '2022-10-11T10:32:50-07:00',
      'Size': '35809224',
      'Tag': 'tag',
      'UserId': '1',
      'device_class': 'energy',
      'friendly_name': 'emoncms@1.1.1.1 parameter 2',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      'unit_of_measurement': 'Wh',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.emoncms_1_1_1_1_parameter_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '18.04',
  })
# ---
# name: test_coordinator_update.10
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'FeedId': '11',
      'FeedName': 'parameter 11',
      'LastUpdated': 1665509570,
      'LastUpdatedStr': '2022-10-11T10:32:50-07:00',
      'Size': '35809224',
      'Tag': 'tag',
      'UserId': '1',
      'device_class': 'pressure',
      'friendly_name': 'emoncms@1.1.1.1 parameter 11',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'hPa',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.emoncms_1_1_1_1_parameter_11',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '18.04',
  })
# ---
# name: test_coordinator_update.11
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'FeedId': '12',
      'FeedName': 'parameter 12',
      'LastUpdated': 1665509570,
      'LastUpdatedStr': '2022-10-11T10:32:50-07:00',
      'Size': '35809224',
      'Tag': 'tag',
      'UserId': '1',
      'friendly_name': 'emoncms@1.1.1.1 parameter 12',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.emoncms_1_1_1_1_parameter_12',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '18.04',
  })
# ---
# name: test_coordinator_update.12
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'FeedId': '1',
      'FeedName': 'parameter 1',
      'LastUpdated': 1665509670,
      'LastUpdatedStr': '2022-10-11T10:34:30-07:00',
      'Size': '35809224',
      'Tag': 'tag',
      'UserId': '1',
      'device_class': 'energy',
      'friendly_name': 'emoncms@1.1.1.1 parameter 1',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      'unit_of_measurement': 'kWh',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.emoncms_1_1_1_1_parameter_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '24.04',
  })
# ---
# name: test_coordinator_update.13
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'FeedId': '2',
      'FeedName': 'parameter 2',
      'LastUpdated': 1665509670,
      'LastUpdatedStr': '2022-10-11T10:34:30-07:00',
      'Size': '35809224',
      'Tag': 'tag',
      'UserId': '1',
      'device_class': 'energy',
      'friendly_name': 'emoncms@1.1.1.1 parameter 2',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      'unit_of_measurement': 'Wh',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.emoncms_1_1_1_1_parameter_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '24.04',
  })
# ---
# name: test_coordinator_update.14
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'FeedId': '3',
      'FeedName': 'parameter 3',
      'LastUpdated': 1665509670,
      'LastUpdatedStr': '2022-10-11T10:34:30-07:00',
      'Size': '35809224',
      'Tag': 'tag',
      'UserId': '1',
      'device_class': 'power',
      'friendly_name': 'emoncms@1.1.1.1 parameter 3',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'W',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.emoncms_1_1_1_1_parameter_3',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '24.04',
  })
# ---
# name: test_coordinator_update.15
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'FeedId': '4',
      'FeedName': 'parameter 4',
      'LastUpdated': 1665509670,
      'LastUpdatedStr': '2022-10-11T10:34:30-07:00',
      'Size': '35809224',
      'Tag': 'tag',
      'UserId': '1',
      'device_class': 'voltage',
      'friendly_name': 'emoncms@1.1.1.1 parameter 4',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'V',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.emoncms_1_1_1_1_parameter_4',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '24.04',
  })
# ---
# name: test_coordinator_update.16
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'FeedId': '5',
      'FeedName': 'parameter 5',
      'LastUpdated': 1665509670,
      'LastUpdatedStr': '2022-10-11T10:34:30-07:00',
      'Size': '35809224',
      'Tag': 'tag',
      'UserId': '1',
      'device_class': 'current',
      'friendly_name': 'emoncms@1.1.1.1 parameter 5',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'A',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.emoncms_1_1_1_1_parameter_5',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '24.04',
  })
# ---
# name: test_coordinator_update.17
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'FeedId': '6',
      'FeedName': 'parameter 6',
      'LastUpdated': 1665509670,
      'LastUpdatedStr': '2022-10-11T10:34:30-07:00',
      'Size': '35809224',
      'Tag': 'tag',
      'UserId': '1',
      'device_class': 'apparent_power',
      'friendly_name': 'emoncms@1.1.1.1 parameter 6',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'VA',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.emoncms_1_1_1_1_parameter_6',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '24.04',
  })
# ---
# name: test_coordinator_update.18
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'FeedId': '7',
      'FeedName': 'parameter 7',
      'LastUpdated': 1665509670,
      'LastUpdatedStr': '2022-10-11T10:34:30-07:00',
      'Size': '35809224',
      'Tag': 'tag',
      'UserId': '1',
      'device_class': 'temperature',
      'friendly_name': 'emoncms@1.1.1.1 parameter 7',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.emoncms_1_1_1_1_parameter_7',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '24.04',
  })
# ---
# name: test_coordinator_update.19
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'FeedId': '8',
      'FeedName': 'parameter 8',
      'LastUpdated': 1665509670,
      'LastUpdatedStr': '2022-10-11T10:34:30-07:00',
      'Size': '35809224',
      'Tag': 'tag',
      'UserId': '1',
      'device_class': 'temperature',
      'friendly_name': 'emoncms@1.1.1.1 parameter 8',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.emoncms_1_1_1_1_parameter_8',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '-4.42',
  })
# ---
# name: test_coordinator_update.2
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'FeedId': '3',
      'FeedName': 'parameter 3',
      'LastUpdated': 1665509570,
      'LastUpdatedStr': '2022-10-11T10:32:50-07:00',
      'Size': '35809224',
      'Tag': 'tag',
      'UserId': '1',
      'device_class': 'power',
      'friendly_name': 'emoncms@1.1.1.1 parameter 3',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'W',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.emoncms_1_1_1_1_parameter_3',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '18.04',
  })
# ---
# name: test_coordinator_update.20
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'FeedId': '9',
      'FeedName': 'parameter 9',
      'LastUpdated': 1665509670,
      'LastUpdatedStr': '2022-10-11T10:34:30-07:00',
      'Size': '35809224',
      'Tag': 'tag',
      'UserId': '1',
      'device_class': 'temperature',
      'friendly_name': 'emoncms@1.1.1.1 parameter 9',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'K',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.emoncms_1_1_1_1_parameter_9',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '24.04',
  })
# ---
# name: test_coordinator_update.21
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'FeedId': '10',
      'FeedName': 'parameter 10',
      'LastUpdated': 1665509670,
      'LastUpdatedStr': '2022-10-11T10:34:30-07:00',
      'Size': '35809224',
      'Tag': 'tag',
      'UserId': '1',
      'device_class': 'frequency',
      'friendly_name': 'emoncms@1.1.1.1 parameter 10',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'Hz',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.emoncms_1_1_1_1_parameter_10',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '24.04',
  })
# ---
# name: test_coordinator_update.22
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'FeedId': '11',
      'FeedName': 'parameter 11',
      'LastUpdated': 1665509670,
      'LastUpdatedStr': '2022-10-11T10:34:30-07:00',
      'Size': '35809224',
      'Tag': 'tag',
      'UserId': '1',
      'device_class': 'pressure',
      'friendly_name': 'emoncms@1.1.1.1 parameter 11',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'hPa',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.emoncms_1_1_1_1_parameter_11',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '24.04',
  })
# ---
# name: test_coordinator_update.23
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'FeedId': '12',
      'FeedName': 'parameter 12',
      'LastUpdated': 1665509670,
      'LastUpdatedStr': '2022-10-11T10:34:30-07:00',
      'Size': '35809224',
      'Tag': 'tag',
      'UserId': '1',
      'friendly_name': 'emoncms@1.1.1.1 parameter 12',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.emoncms_1_1_1_1_parameter_12',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '24.04',
  })
# ---
# name: test_coordinator_update.3
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'FeedId': '4',
      'FeedName': 'parameter 4',
      'LastUpdated': 1665509570,
      'LastUpdatedStr': '2022-10-11T10:32:50-07:00',
      'Size': '35809224',
      'Tag': 'tag',
      'UserId': '1',
      'device_class': 'voltage',
      'friendly_name': 'emoncms@1.1.1.1 parameter 4',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'V',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.emoncms_1_1_1_1_parameter_4',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '18.04',
  })
# ---
# name: test_coordinator_update.4
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'FeedId': '5',
      'FeedName': 'parameter 5',
      'LastUpdated': 1665509570,
      'LastUpdatedStr': '2022-10-11T10:32:50-07:00',
      'Size': '35809224',
      'Tag': 'tag',
      'UserId': '1',
      'device_class': 'current',
      'friendly_name': 'emoncms@1.1.1.1 parameter 5',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'A',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.emoncms_1_1_1_1_parameter_5',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '18.04',
  })
# ---
# name: test_coordinator_update.5
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'FeedId': '6',
      'FeedName': 'parameter 6',
      'LastUpdated': 1665509570,
      'LastUpdatedStr': '2022-10-11T10:32:50-07:00',
      'Size': '35809224',
      'Tag': 'tag',
      'UserId': '1',
      'device_class': 'apparent_power',
      'friendly_name': 'emoncms@1.1.1.1 parameter 6',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'VA',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.emoncms_1_1_1_1_parameter_6',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '18.04',
  })
# ---
# name: test_coordinator_update.6
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'FeedId': '7',
      'FeedName': 'parameter 7',
      'LastUpdated': 1665509570,
      'LastUpdatedStr': '2022-10-11T10:32:50-07:00',
      'Size': '35809224',
      'Tag': 'tag',
      'UserId': '1',
      'device_class': 'temperature',
      'friendly_name': 'emoncms@1.1.1.1 parameter 7',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.emoncms_1_1_1_1_parameter_7',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '18.04',
  })
# ---
# name: test_coordinator_update.7
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'FeedId': '8',
      'FeedName': 'parameter 8',
      'LastUpdated': 1665509570,
      'LastUpdatedStr': '2022-10-11T10:32:50-07:00',
      'Size': '35809224',
      'Tag': 'tag',
      'UserId': '1',
      'device_class': 'temperature',
      'friendly_name': 'emoncms@1.1.1.1 parameter 8',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.emoncms_1_1_1_1_parameter_8',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '-7.76',
  })
# ---
# name: test_coordinator_update.8
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'FeedId': '9',
      'FeedName': 'parameter 9',
      'LastUpdated': 1665509570,
      'LastUpdatedStr': '2022-10-11T10:32:50-07:00',
      'Size': '35809224',
      'Tag': 'tag',
      'UserId': '1',
      'device_class': 'temperature',
      'friendly_name': 'emoncms@1.1.1.1 parameter 9',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'K',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.emoncms_1_1_1_1_parameter_9',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '18.04',
  })
# ---
# name: test_coordinator_update.9
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'FeedId': '10',
      'FeedName': 'parameter 10',
      'LastUpdated': 1665509570,
      'LastUpdatedStr': '2022-10-11T10:32:50-07:00',
      'Size': '35809224',
      'Tag': 'tag',
      'UserId': '1',
      'device_class': 'frequency',
      'friendly_name': 'emoncms@1.1.1.1 parameter 10',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'Hz',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.emoncms_1_1_1_1_parameter_10',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '18.04',
  })
# ---
